# neovim-qt

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  appveyor.yml
.circleci/: config.yml
.github/workflows/: build-test.yml  format.yml  linter.yml  neovim-api.yml
bindings/: function_enum.h  function_static.cpp  generate_bindings.py  neovim.cpp  neovim.h  neovimapi.cpp  neovimapi.h
cmake/: CPackOptions.cmake  FindMsgpack.cmake  MacOSXBundleInfo.plist.in  MacOSXPaths.cmake  WinDeployQt.cmake  mingw32-w64-cross-travis.toolchain.cmake
contrib/: appveyor-mingw-qt53.bat  appveyor-mingw.bat  appveyor-msvc.bat  appveyor-msys2-qt5-static.bat  appveyor.yml  azure-pipelines.yml  clang-format-diff.sh  clang-format.txt  coveralls-circle.yml  coveralls-travis.yml  neovim-qt.nuspec  wix_patch.xml  ycm_extra_conf.py
doc/: CMakeLists.txt  Doxyfile.in  neovim_gui_shim.txt  nvim_gui_shim.txt
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
scripts/: code-gen.lua
src/: CMakeLists.txt  compat.cpp  compat.h  function.cpp  function.h  input.cpp  main.cpp  msgpackiodevice.cpp  msgpackiodevice.h  msgpackrequest.cpp  msgpackrequest.h  neovimconnector.cpp  neovimconnector.h  neovimconnectorhelper.cpp  neovimconnectorhelper.h  neovimqtgen.cpp  neovimrequest.cpp  neovimrequest.h  shell.cpp  shell.h  stdinreader.cpp  stdinreader.h  util.cpp  util.h  version.h.in
src/auto/: CMakeLists.txt  function_enum.h  function_static.cpp  neovim.cpp  neovim.h  neovimapi0.cpp  neovimapi0.h  neovimapi1.cpp  neovimapi1.h  neovimapi2.cpp  neovimapi2.h  neovimapi3.cpp  neovimapi3.h  neovimapi4.cpp  neovimapi4.h  neovimapi5.cpp  neovimapi5.h  neovimapi6.cpp  neovimapi6.h
src/auto/0/: neovim.cpp
src/auto/1/: function_enum.h  function_static.cpp  neovim.cpp  neovim.h
src/auto/2/: function_enum.h  function_static.cpp  neovim.cpp  neovim.h
src/compat/: CMakeLists.txt  compat.h  compat_qt5.cpp  compat_qt6.cpp
src/gui/: CMakeLists.txt  app.cpp  app.h  app_runtime.cpp  app_runtime_mac.cpp  arguments.h  arguments_geometry.cpp  arguments_qwindowgeometry.cpp  cmdblock.cpp  cmdblock.h  cmdline.cpp  cmdline.h  cmdwidget.cpp  cmdwidget.h  compat.h  compat_gui.h  compat_gui_qt5.cpp  compat_gui_qt6.cpp  compat_qt5.cpp  compat_qt6.cpp  contextmenu.cpp  contextmenu.h  data.qrc  data.rc  errorwidget.cpp  errorwidget.h  highlight.cpp  highlight.h  images.qrc  input.cpp  input.h  input_mac.cpp  input_unix.cpp  input_win32.cpp  main.cpp  mainwindow.cpp  mainwindow.h  nvim-qt.desktop  popupmenu.cpp  popupmenu.h  (+17 more)
src/gui/cmdline/: CMakeLists.txt  blockdisplay.cpp  extcmdlinewidget.cpp  linemodel.cpp  linemodel.h
src/gui/commandline/: CMakeLists.txt  blockdisplay.cpp  blockdisplay.h  blockwidget.cpp  blockwidget.h  commandline.cpp  commandline.h  linemodel.cpp  linemodel.h  mainwidget.cpp  mainwidget.h  mode.cpp  mode.h  position.cpp  position.h
src/gui/runtime/doc/: neovim_gui_shim.txt  nvim_gui_shim.txt
src/gui/runtime/plugin/: nvim_gui_shim.vim
src/gui/shellwidget/: CMakeLists.txt  cell.cpp  cell.h  compat_shellwidget.h  compat_shellwidget_qt5.cpp  compat_shellwidget_qt6.cpp  cursor.cpp  cursor.h  example.cpp  example2.cpp  example3.cpp  fontinfo.cpp  helpers.cpp  helpers.h  highlight.cpp  highlight.h  konsole_wcwidth.cpp  konsole_wcwidth.h  shellcontents.cpp  shellcontents.h  shellwidget.cpp  shellwidget.h
src/gui/shellwidget/test/: CMakeLists.txt  bench_cell.cpp  bench_paint.cpp  bench_scroll.cpp  bench_widgetpaint.cpp  test_cell.cpp  test_ligatures.cpp  test_shellcontents.cpp  test_shellwidget.cpp
src/gui/shellwidget/test/shellcontents/: shell1.txt  shell2.txt
test/: CMakeLists.txt  common.cpp  common.h  common_gui.cpp  common_gui.h  data.qrc  mock_qsettings.cpp  mock_qsettings.h  tst_callallmethods.cpp  tst_connector.cpp  tst_encoding.cpp  tst_input.cpp  tst_input.h  tst_input_common.cpp  tst_input_mac.cpp  tst_input_unix.cpp  tst_input_win32.cpp  tst_main.cpp  tst_msgpackiodevice.cpp  tst_neovimconnector.cpp  tst_neovimobject.cpp  tst_qsettings.cpp  tst_scroll.cpp  tst_shell.cpp  tst_shell.h  tst_shell_mac.cpp  tst_shell_unix.cpp  tst_shell_win32.cpp
test/clipboard/autoload/provider/: clipboard.vim
testbins/: nvim0.2.0
